Fix services style

--- a/index.html
+++ b/index.html
@@ -593,14 +593,8 @@
                         </div>
                         <div class="sr01_dtl text-center">
                             <i class="flaticon-092-invoice-3"></i>
-                            <h3><a href="operation_service.html">Operación y </br>comercialización</a></h3>
-                            <p>
-                                Diagnosticamos el desempeño y evolución de tus estrategias comerciales
-                                así como el ciclo de venta. Validamos tus planes comerciales y mercadológicos
-                                aplicando una metodología diseñada en programas de coaching para equipos
-                                gerenciales y jefaturas.
-                            </p>
-                            <a class="learn_more_lnk" href="operation_service.html"></br>Leer Más</a>
+                            <h3><a href="operation_service.html">Operación y comercialización</a></h3>
+                            <div class="learn_more_lnk_div"><a class="learn_more_lnk" href="operation_service.html">Leer Más</a></div>
                         </div>
                     </div>
                     <div class="item service_01">
@@ -609,15 +603,9 @@
                         </div>
                         <div class="sr01_dtl text-center">
                             <i class="flaticon-205-money-2"></i>
-                            <h3><a href="finance_service.html">Finanzas, administración </br>y planeación fiscal</a>
+                            <h3><a href="finance_service.html">Finanzas, administración y planeación fiscal</a>
                             </h3>
-                            <p>
-                                Ofrecemos servicios de análisis a la calidad y confiabilidad
-                                de tu información financiera mediante revisiones estratégicas
-                                a tus principales indicadores, ayudando a la efectiva toma
-                                de decisiones.
-                            </p>
-                            <a class="learn_more_lnk" href="finance_service.html"></br></br>Leer Más</a>
+                            <div class="learn_more_lnk_div"><a class="learn_more_lnk" href="finance_service.html">Leer Más</a></div>
                         </div>
                     </div>
                     <div class="item service_01">
@@ -626,13 +614,8 @@
                         </div>
                         <div class="sr01_dtl text-center">
                             <i class="flaticon-075-user-3"></i>
-                            <h3><a href="capital_service.html">Capital humano y desarrollo</br>organizacional</a></h3>
-                            <p>
-                                Proveemos y administramos la mejor plataforma de herramientas
-                                de medición de tu talento: psicometrías, evaluaciones de desempeño,
-                                evaluaciones 360 y clima laboral.
-                            </p>
-                            <a class="learn_more_lnk" href="capital_service.html"></br></br></br>Leer Más</a>
+                            <h3><a href="capital_service.html">Capital humano y desarrollo organizacional</a></h3>
+                            <div class="learn_more_lnk_div"><a class="learn_more_lnk" href="capital_service.html">Leer Más</a></div>
                         </div>
                     </div>
                     <div class="item service_01">
@@ -642,16 +625,10 @@
                         <div class="sr01_dtl text-center">
                             <i class="flaticon-095-magnifying-glass"></i>
                             <h3>
-                                <a href="headhunting_service.html">Atracción de talento </br>(Headhunting),
-                                    evaluación </br>de candidatos,
-                                    </br>Assessment Center.
+                                <a href="headhunting_service.html">Atracción de talento (Headhunting).
                                 </a>
                             </h3>
-                            <p>
-                                Contamos con un equipo de profesionales dedicados a la aplicación
-                                del método más eficiente para la evaluación del talento.
-                            </p>
-                            <a class="learn_more_lnk" href="headhunting_service.html">Leer Más</a>
+                            <div class="learn_more_lnk_div"><a class="learn_more_lnk" href="headhunting_service.html">Leer Más</a></div>
                         </div>
                     </div>
                     <div class="item service_01">
@@ -660,13 +637,8 @@
                         </div>
                         <div class="sr01_dtl text-center">
                             <i class="flaticon-137-money-bag-3"></i>
-                            <h3><a href="coso_service.html">Control interno, procesos,
-                                </br>medición del riesgo </br>y método COSO.</a></h3>
-                            <p>
-                                Desarrollamos para ti un modelo de riesgo en base a las necesidades
-                                de tu negocio.
-                            </p>
-                            <a class="learn_more_lnk" href="coso_service.html"></br></br></br>Leer Más</a>
+                            <h3><a href="coso_service.html">Control interno, método COSO.</a></h3>
+                            <div class="learn_more_lnk_div"><a class="learn_more_lnk" href="coso_service.html">Leer Más</a></div>
                         </div>
                     </div>
                     <div class="item service_01">
@@ -676,12 +648,8 @@
                         <div class="sr01_dtl text-center">
                             <i class="flaticon-127-profits-4"></i>
                             <h3><a href="coorporate_service.html">Consejero independiente
-                                </br>y gobierno corporativo</a></h3>
-                            <p>
-                                Ayudamos a tu empresa a incorporar la figura de gobierno corporativo.
-                            </p>
-                            <a class="learn_more_lnk" href="coorporate_service.html"></br></br></br></br></br>Leer
-                                Más</a>
+                                y gobierno corporativo</a></h3>
+                            <div class="learn_more_lnk_div"><a class="learn_more_lnk" href="coorporate_service.html">Leer Más</a></div>
                         </div>
                     </div>
                     <div class="item service_01">
@@ -690,12 +658,9 @@
                         </div>
                         <div class="sr01_dtl text-center">
                             <i class="flaticon-122-idea-3"></i>
-                            <h3><a href="identity_service.html">Identidad corporativa, </br>impresos
-                                </br>y promocionales</a></h3>
-                            <p>
-                                Impulsamos tus ideas por medio de servicios creativos.
-                            </p>
-                            <a class="learn_more_lnk" href="identity_service.html"></br></br></br>Leer Más</a>
+                            <h3><a href="identity_service.html">Identidad corporativa, impresos
+                                y promocionales</a></h3>
+                            <div class="learn_more_lnk_div"><a class="learn_more_lnk" href="identity_service.html">Leer Más</a></div>
                         </div>
                     </div>
                 </div>
