add privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -179,25 +179,25 @@
         <div class="row">
             <div class="col-md-12 col-lg-12 noPaddingRight">
                 <div class="ab_content privacy">
-                    <h1>Política de privacidad de Dimension 360</h1>
+                    <h1>Política de privacidad de Dimension 360.</h1>
 
-                    <p>En Dimension 360, accesible desde https://dimension-360.netlify.app/, una de nuestras principales prioridades es la privacidad de nuestros visitantes. Este documento de Política de privacidad contiene tipos de información que Dimension 360 recopila y registra y cómo la usamos.</p>
+                    <p>En Dimensión 360, accesible desde<a href="https://www.dimension360.com.mx/">https://www.dimension360.com.mx/</a>, una de nuestras principales prioridades es la privacidad de nuestros visitantes. Este documento de política de privacidad contiene los tipos de información que Dimensión 360 recopila, registra y cómo se usa.</p>
 
-                    <p>Si tiene preguntas adicionales o requiere más información sobre nuestra Política de Privacidad, no dude en contactarnos.</p>
+                    <p>Si tiene preguntas adicionales o requiere más información sobre nuestra política de privacidad, no dude en contactarnos.</p>
 
-                    <p>Esta Política de privacidad se aplica solo a nuestras actividades en línea y es válida para los visitantes de nuestro sitio web con respecto a la información que compartieron y/o recopilaron en Dimension 360. Esta política no se aplica a ninguna información recopilada fuera de línea o a través de otros canales. que este sitio web. Nuestra Política de privacidad se creó con la ayuda del <a href="https://www.privacypolicygenerator.info">Generador gratuito de políticas de privacidad</a>.</p>
+                    <p>Esta política de privacidad se aplica sólo a nuestras actividades en línea y es válida para los visitantes de nuestro sitio web con respecto a la información que compartieron y/o recopilaron en Dimensión 360. Esta política no se aplica a ninguna información recopilada fuera de línea o a través de otros canales que este sitio web. Nuestra política de privacidad se creó con la ayuda del generador gratuito de políticas de privacidad.</a>.</p>
 
-                    <h2>Consentimiento</h2>
+                    <h2>Consentimiento.</h2>
 
-                    <p>Al utilizar nuestro sitio web, usted acepta nuestra Política de privacidad y acepta sus términos.</p>
+                    <p>Al utilizar nuestro sitio web, usted acepta nuestra política de privacidad y acepta sus términos.</p>
 
-                    <h2>Información que recopilamos</h2>
+                    <h2>Información que recopilamos.</h2>
 
-                    <p>La información personal que se le solicita que proporcione y los motivos por los que se le solicita que la proporcione se le aclararán en el momento en que le solicitemos que proporcione su información personal.</p>
-                    <p>Si se comunica con nosotros directamente, es posible que recibamos información adicional sobre usted, como su nombre, dirección de correo electrónico, número de teléfono, el contenido del mensaje y/o los archivos adjuntos que nos envíe, y cualquier otra información que decida proporcionar. .</p>
-                    <p>Cuando se registra para una Cuenta, es posible que le solicitemos su información de contacto, incluidos elementos como el nombre, el nombre de la empresa, la dirección, la dirección de correo electrónico y el número de teléfono.</p>
+                    <p>La información personal que se le solicite y los motivos por los que se le solicita se le aclararán en el momento en que se la solicitemos.</p>
+                    <p>Si se comunica con nosotros, es posible que recibamos información adicional sobre usted como su nombre, dirección de correo electrónico, número de teléfono, el contenido del mensaje y/o los archivos adjuntos que nos envíe, y cualquier otra información que decida proporcionar.</p>
+                    <p>Cuando se registra para una cuenta, es posible que le solicitemos su información de contacto, incluidos elementos como el nombre, el nombre de la empresa, la dirección, la dirección de correo electrónico y el número de teléfono.</p>
 
-                    <h2>Cómo usamos su información</h2>
+                    <h2>Cómo usamos su información.</h2>
 
                     <p>Utilizamos la información que recopilamos de varias formas, entre ellas:</p>
 
@@ -206,29 +206,28 @@
                         <li>Mejorar, personalizar y expandir nuestro sitio web</li>
                         <li>Comprender y analizar cómo utiliza nuestro sitio web</li>
                         <li>Desarrollar nuevos productos, servicios, características y funciones</li>
-                        <li>Comunicarnos con usted, ya sea directamente o a través de uno de nuestros socios, incluido el servicio de atención al cliente, para brindarle actualizaciones y otra información relacionada con el sitio web, y con fines promocionales y de marketing</li>
-                        <li>Enviarle correos electrónicos</li>
-                        <li>Encuentre y prevenga el fraude</li>
+                        <li>Comunicarnos con usted, ya sea directamente o a través de uno de nuestros socios, incluido el servicio de atención al cliente, para brindarle actualizaciones y otra información relacionada con el sitio web, y con fines promocionales y de marketing.</li>
+                        <li>Enviarle correos electrónicos.</li>
+                        <li>Encuentre y prevenga el fraude.</li>
                     </ul>
 
-                    <h2>Archivos de registro</h2>
+                    <h2>Archivos de registro.</h2>
 
-                    <p>Dimension 360 sigue un procedimiento estándar de uso de archivos de registro. Estos archivos registran a los visitantes cuando visitan sitios web. Todas las empresas de alojamiento hacen esto y forman parte del análisis de los servicios de alojamiento. La información recopilada por los archivos de registro incluye direcciones de protocolo de Internet (IP), tipo de navegador, proveedor de servicios de Internet (ISP), marca de fecha y hora, páginas de referencia/salida y, posiblemente, la cantidad de clics. Estos no están vinculados a ninguna información que sea personalmente identificable. El propósito de la información es analizar tendencias, administrar el sitio, rastrear el movimiento de los usuarios en el sitio web y recopilar información demográfica.</p>
-
-
+                    <p>Dimensión 360 sigue un procedimiento estándar de uso de archivos de registro. Estos archivos registran a los visitantes. Todas las empresas de alojamiento hacen esto y forman parte del análisis de sus servicios. La información recopilada por los archivos de registro incluye direcciones de protocolo de Internet (IP), tipo de navegador, proveedor de servicios de Internet (ISP), marca de fecha y hora, páginas de referencia/salida y, posiblemente, la cantidad de clics. Estos no están vinculados a ninguna información que sea personalmente identificable. El propósito de la información es analizar tendencias, administrar el sitio, rastrear el movimiento de los usuarios en el sitio web y recopilar información demográfica.</p>
 
 
-                    <h2>Políticas de privacidad de los socios publicitarios</h2>
 
-                    <P>Puede consultar esta lista para encontrar la Política de privacidad de cada uno de los socios publicitarios de Dimension 360.</p>
 
-                    <p>Los servidores de anuncios o redes de anuncios de terceros utilizan tecnologías como cookies, JavaScript o balizas web que se utilizan en sus respectivos anuncios y enlaces que aparecen en Dimension 360, que se envían directamente al navegador de los usuarios. Reciben automáticamente su dirección IP cuando esto ocurre. Estas tecnologías se utilizan para medir la efectividad de sus campañas publicitarias y/o para personalizar el contenido publicitario que ve en los sitios web que visita.</p>
+                    <h2>Políticas de privacidad de los socios publicitarios.</h2>
 
-                    <p>Tenga en cuenta que Dimension 360 no tiene acceso ni control sobre estas cookies que utilizan los anunciantes de terceros.</p>
+                    <P>Puede consultar esta lista para encontrar la política de privacidad de cada uno de los socios publicitarios de Dimensión 360. Los servidores de anuncios o redes de anuncios de terceros utilizan tecnologías como cookies, JavaScript o balizas web que se utilizan en sus respectivos anuncios y enlaces que aparecen en Dimensión 360, que se envían directamente al navegador de los usuarios. Reciben automáticamente su dirección IP cuando esto ocurre. Estas tecnologías se utilizan para medir la efectividad de sus campañas publicitarias y/o para personalizar el contenido publicitario que ve en los sitios web que visita.</p>
 
-                    <h2>Políticas de privacidad de terceros</h2>
+                    <p>Tenga en cuenta que Dimensión 360 no tiene acceso ni control sobre estas cookies que utilizan los anunciantes de terceros.</p>
 
-                    <p>La política de privacidad de Dimension 360 no se aplica a otros anunciantes o sitios web. Por lo tanto, le recomendamos que consulte las Políticas de privacidad respectivas de estos servidores de anuncios de terceros para obtener información más detallada. Puede incluir sus prácticas e instrucciones sobre cómo excluirse de ciertas opciones. </p>
+
+                    <h2>Políticas de privacidad de terceros.</h2>
+
+                    <p>La política de privacidad de Dimensión 360 no se aplica a otros anunciantes o sitios web. Por lo tanto, le recomendamos que consulte las políticas de privacidad respectivas de estos servidores de anuncios de terceros para obtener información más detallada. Puede incluir sus prácticas e instrucciones sobre cómo excluirse de ciertas opciones.</p>
 
                     <p>Puede optar por deshabilitar las cookies a través de las opciones de su navegador individual. Para conocer información más detallada sobre la gestión de cookies con navegadores web específicos, se puede encontrar en los sitios web respectivos de los navegadores.</p>
 
