resolve problem of quienes somos

--- a/index.html
+++ b/index.html
@@ -404,6 +404,8 @@
                         Con la suma de talentos y más de 22 años de experiencia nace Dimensión 360. Dedicados a la
                         innovación y la transformación de las empresas, mejorando su productividad, rentabilidad y
                         cultura organizacional.
+                    </p>
+                    <p style="text-align: justify;">
                         Nuestro logo en su forma ascendente es creativo e inspirador, transforma, evoluciona e impulsa a
                         la mejora continua, es aspiracional.
                     </p>
